--- a/static/css/app.css
+++ b/static/css/app.css
@@ -11,11 +11,26 @@ html, body, .wrapper, .view {
     background-color: #1565c0 !important;
 }
 
+.view {
+    display: -webkit-flex;
+    -webkit-align: center;
+    -webkit-align-items: center;
+    display: flex;
+    align: center;
+    align-items: center;
+}
+
 .main {
+    width: 100%;
     max-width: 600px;
     margin: auto;
-    margin-top: 15%;
     background-color: #fff;
+    z-index: 100;
+}
+
+.spacer {
+    width: 100%;
+    height: 40%;
 }
 
 .login-form, .code-form, .alert {
@@ -64,6 +79,10 @@ html, body, .wrapper, .view {
         margin-top: 0px;
         width: 100%;
         height: 100%;
+    }
+
+    .spacer {
+        display: none;
     }
     
     .login-form, .code-form, .alert {
